<resources>
    <string name="app_name">UI_Exercise1</string>
    <string name="tag1">"GreenFlag customers can create an account to access"</string>
    <string name="txt_car">Car health updates"</string>
    <string name="txt_req">Request a rescue online</string>
    <string name="txt_pol">Policy information</string>
    <string name="btn_create">Create an account</string>
    <string name="txt_email">Email address</string>
    <string name="txt_pass">Create Password</string>
    <string name="txt_repeat">Repeat Password</string>
    <string name="txt_const">Your password should have a minimum of 8 characters and contain at least one number, one uppercase and one lowercase letter.You can use special characters.</string>
    <string name="btn_next">Next</string>
    <string name="see_criteria_below"> see criteria below</string>

    <string name="upload">upload</string>
    <string name="camera">camera</string>
    <string name="name">Name</string>
    <string name="ni">National Insurance number</string>
    <string name="passport">Passport</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
</resources>