<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:id="@+id/txt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_weight="1"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:text="@string/txt_email" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:autofillHints="" />

        <TextView
            android:id="@+id/txt_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:text="@string/txt_pass" />

        <EditText
            android:id="@+id/edt_pass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/see_criteria_below"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/txt_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:text="@string/txt_repeat" />

        <EditText
            android:id="@+id/edt_repeat"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/txt_const"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="@font/museosans_3"
            android:text="@string/txt_const" />
    </LinearLayout>

    <Button
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/btn_next"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:background="@drawable/gradient_button_background"
        />

</RelativeLayout>