<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo_green_flag"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="53dp" />

    <TextView
        android:id="@+id/tv_tag1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/tag1"
        android:fontFamily="@font/museosans_5"
        android:textSize="25sp"
        android:textColor="@color/white"/>

    <ImageView
        android:id="@+id/iv_tick1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_below="@+id/tv_tag1"
        app:srcCompat="@drawable/tick"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/tv_txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_tag1"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/iv_tick1"
        android:text="@string/txt_car"
        android:fontFamily="@font/museosans_3"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/iv_tick2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_below="@+id/iv_tick1"
        app:srcCompat="@drawable/tick" />

    <TextView
        android:id="@+id/tv_txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_txt1"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/iv_tick2"
        android:fontFamily="@font/museosans_3"
        android:text="@string/txt_req"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/iv_tick3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_below="@+id/iv_tick2"
        app:srcCompat="@drawable/tick"
        android:layout_marginStart="30dp" />

    <TextView
        android:id="@+id/tv_txt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_txt2"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@+id/iv_tick3"
        android:fontFamily="@font/museosans_3"
        android:text="@string/txt_pol"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/gradient_button_background"
        android:onClick="btn_click"
        android:text="@string/btn_create"
        android:textColor="@color/black"
        android:textSize="25sp" />

</RelativeLayout>